fix: move ModuleAnnotationProcessor service registration to errai-common (#491)
* fix: move ModuleAnnotationProcessor service registration to errai-common

The APT service file declaring ModuleAnnotationProcessor has lived in
errai-marshalling since 2012, but the class itself resides in errai-common.
This mismatch was benign under older tooling but breaks maven-javadoc-plugin
>= 3.11, which validates that every declared javax.annotation.processing.Processor
provider class exists in the same JAR when deriving its JPMS module descriptor:

  Unable to derive module descriptor for errai-marshalling-5.0.0-SNAPSHOT.jar:
  Provider class org.jboss.errai.common.rebind.ModuleAnnotationProcessor
  not in module

Fix:
- Delete META-INF/services/javax.annotation.processing.Processor from
  errai-marshalling (wrong jar).
- Add it under errai-common/src/main/resources (correct jar, class is here).
- Add -proc:none to errai-common's maven-compiler-plugin configuration to
  prevent a chicken-and-egg failure where the compiler tries to load the
  processor from the service file before the class has been compiled.

* fix: CI error

* fix(annotation-processors): fix processor test failures on JDK 17+

- Use List.copyOf() to eagerly resolve diagnostic line positions before
  the file manager closes, fixing ClosedFileSystemException in
  TemplatedAnnotationCheckerTest
- Fix operator-precedence bug in assertCompilationMessage() col condition
- Update BoundAnnotationCheckerTest line numbers to match Jakarta EE
  migration of BoundNotAWidget.java (javax→jakarta import shift)

* fix(annotation-processors): fix ClosedFileSystemException in processor tests on JDK 17+

Force eager resolution of diagnostic line/column positions while the file
manager is still open, preventing ClosedFileSystemException when assertions
later call getLineNumber(). Also fix operator-precedence bug in
assertCompilationMessage() col condition, and update BoundAnnotationCheckerTest
line numbers after Jakarta EE import